--- a/appsettings.Development.json
+++ b/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
-  }
+  },
+    "ConnectionStrings" : {
+        "ConnectionString": "server=localhost;user id=root;password=mypass;database=shanpages"
+    }
 }
